# Study-01

./: .gitignore  01_Classify_micrographs.ipynb  MNIST_CNN.ipynb  MNIST_CNN_relu-CPU.ipynb  MNIST_CNN_relu-GPU.ipynb  MNIST_CNN_tanh-CPU.ipynb  MNIST_CNN_tanh-GPU.ipynb  MNIST_CNN_tanh.ipynb  Sol_TP2_MNIST_convol-full.ipynb  Sol_TP2_MNIST_convol.ipynb  hello.py  pyproject.toml
utils/: tools.py
